# PenseNissoApp

./: CONTRIBUTORS.md  LICENSE  README.md  REQUIREMENTS.md  build.sh  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: user-story-card.md
.github/workflows/: build.yml
app_usuario/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app_usuario/migrations/: 0001_initial.py
app_usuario/templates/: cadastro.html  listausuarios.html  login.html  logout.html  perfilusuario.html
base_static/css/: carousel.css
base_static/global/: base.css
base_static/js/: carousel.js
base_templates/global/: about_us.html  base.html  footer.html  header.html  privacy_policy.html  searchbar.html
company/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
company/migrations/: 0001_initial.py  0002_alter_company_options.py  0003_companysuggestionmodel.py  0003_rate.py  0004_merge_0003_companysuggestionmodel_0003_rate.py  0005_alter_rate_company_alter_rate_score_alter_rate_user.py  0006_companysuggestionmodel_status.py
comparator/: tests.py  urls.py  views.py
comparator/templates/: comparator.html
global_templates/global/: base.html
home/: views.py
home/templates/: home.html
infos/: admin.py  fields.py  forms.py  models.py  tests.py  urls.py  views.py
infos/templates/: report.html  (+6 more)
pensenisso/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
search/: filters.py  forms.py  tests.py  trigram.py  urls.py  views.py
user/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
(+38 files in other folders)
