[tool.poetry]
name = "pensenissoapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref= "3.7.2"
crispy-tailwind="0.5.0"
Django="4.2.5"
django-crispy-forms="2.0"
Pillow="10.0.0"
sqlparse="0.4.4"
typing_extensions="4.7.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
